# Online_Tech_Store

./: .coverage  .flacke8  README.md  pyproject.toml
config/: asgi.py  settings.py  urls.py  wsgi.py
e_shop/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
e_shop/migrations/: 0001_initial.py  0002_alter_product_options_and_more.py
users/: admin.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
